--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-track-player": "^1.1.8"
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-track-player": "^1.1.8",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/runtime": "^7.7.6",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@types/react": "^16.4.14",
+    "@types/react-native": "^0.57.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
